crates/formatter/tests/snapshots/snapshots__coder__migrations__000191_workspace_agent_port_sharing.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table workspace_agent_port_share (
	workspace_id uuid not null references workspaces (id) on delete cascade,
	agent_name text not null,
	port integer not null,
	share_level app_sharing_level not null
);

alter table workspace_agent_port_share
	add primary key (workspace_id, agent_name, port);

alter table templates
	add column max_port_sharing_level app_sharing_level not null
		default 'owner'::app_sharing_level;

-- Update the template_with_users view by recreating it.
drop view template_with_users;
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;
comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
