crates/formatter/tests/snapshots/snapshots__coder__migrations__000193_default_organization.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index organizations_single_default_org;
alter table organizations drop column is_default;
