crates/formatter/tests/snapshots/snapshots__coder__migrations__000194_trigger_delete_user_user_link.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop trigger if exists trigger_update_users on users;
drop function IF exists delete_deleted_user_resources;

drop trigger if exists trigger_upsert_user_links on user_links;
drop function IF exists insert_user_links_fail_if_user_deleted;

-- Restore the previous trigger
create function delete_deleted_user_api_keys()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		delete from api_keys where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;


create trigger trigger_update_users
	after insert or update on users
	for each row
	when (NEW.deleted = true)
	execute procedure delete_deleted_user_api_keys();
