crates/formatter/tests/snapshots/snapshots__coder__migrations__000197_oauth2_provider_app_audit.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- It is not possible to drop enum values from enum types, so the UPs on
-- resource_type have "IF NOT EXISTS".
