crates/formatter/tests/snapshots/snapshots__coder__migrations__000197_oauth2_provider_app_audit.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type resource_type add value if not exists 'oauth2_provider_app';
alter type resource_type add value if not exists 'oauth2_provider_app_secret';
