crates/formatter/tests/snapshots/snapshots__coder__migrations__000198_ensure_default_org.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- There is no down. If the org is created, just let it be. Deleting an org feels dangerous in a migration.
