crates/formatter/tests/snapshots/snapshots__coder__migrations__000199_port_share_protocol.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type port_share_protocol as enum (
	'http',
	'https'
);

alter table workspace_agent_port_share
	add column protocol port_share_protocol not null
		default 'http'::port_share_protocol;
